# shelly

./: CMakeLists.txt  Cache.cpp  Cache.h  Config.cpp  Config.h  DeviceFetcher.cpp  DeviceFetcher.h  README.md  Request.cpp  Request.h  enums.h  main.cpp
Model/: CachedDevice.cpp  CachedDevice.h  DeviceInfo.cpp  DeviceInfo.h
